# nullnode

./: .echoforge.yml  .env.example  .gitignore  ARBORESCENCE.md  ARCHITECTURE.md  README.md  RENDEZVOUS-PROTOCOL.md  STATE.md  TODO.md  index.html  package.json  restart.sh  start.sh  stop.sh  vite.config.ts
relay/: .gitignore  README.md  package.json  start.sh  stop.sh  tsconfig.json
relay/src/: backup-store.ts  envelope-store.ts  limits.ts  protocol.ts  registry.ts  server.ts
src/: App.tsx  SessionApp.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  presence.rs  state.rs  tray.rs  window.rs
src/auth/: AuthGate.tsx  LoginForm.tsx  PinStep.tsx  RegisterForm.tsx  UnlockForm.tsx
src/backup/: BackupPanel.tsx  backup-crypto.ts  backup-sync.ts
src/boot/: BootSequence.tsx  boot-lines.ts
src/comms/: CommsConsole.tsx  ConnectPanel.tsx  ConversationList.tsx  DropCode.tsx  MessageStream.tsx  peer-label.ts  use-unread.ts
src/crypto/: encryption.ts  identity.ts
src/desktop/: tauri-bridge.ts  use-desktop-presence.ts
src/hud/: HudOverlay.tsx
src/identity/: IdentityCard.tsx  RecoveryPanel.tsx  address.ts  seed.ts  use-identity.ts
src/rendezvous/: rendezvous-client.ts  sealed-signal.ts  social-envelope.ts  use-rendezvous.ts
src/roster/: AddFriend.tsx  FriendRequests.tsx  FriendsList.tsx  NetworkPanel.tsx  types.ts  use-roster.ts
src/session/: history.ts  use-secure-session.ts
src/shared/: types.ts  (+1 more)
(+13 files in other folders)
