[package]
name = "nullnode-daemon"
version = "0.0.0"
description = "NULLNODE desktop ghost daemon — holds relay presence while the GUI is closed."
edition = "2021"
rust-version = "1.77"

[lib]
name = "nullnode_daemon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
